objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>FinServ__PrincipalBalance__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrincipalPaidYearToDate__c</fullName>
        <description>The total amount paid against the principal in the current tax year.</description>
        <label>Principal Paid Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance policy product name.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Account Products</relationshipLabel>
        <relationshipName>FinancialAccountProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PropTaxPaidYearToDate__c</fullName>
        <description>The total amount of property tax paid in the current tax year.</description>
        <label>Property Tax Paid Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__RebalanceFrequency__c</fullName>
        <label>Rebalance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__RepaymentPeriodMonths__c</fullName>
        <label>Repayment Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RoutingNumber__c</fullName>
        <label>RoutingNumber</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryBankerIdentifier__c</fullName>
        <description>The unique identifier of the secondary banker who manages the financial account.</description>
        <label>Secondary Banker Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryBankerName__c</fullName>
        <description>The name of the secondary banker who manages the financial account.</description>
        <label>Secondary Banker Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceProvider__c</fullName>
        <description>Custodian or recordkeeper of this financial account.</description>
        <label>Service Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceType__c</fullName>
        <description>The type of service undertaken.</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Positive Pay</fullName>
                </value>
                <value>
                    <fullName>Business Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Purchase Cards</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>Zero Balance Account</fullName>
                </value>
                <value>
                    <fullName>Bill Presentment</fullName>
                </value>
                <value>
                    <fullName>Controlled Disbursement</fullName>
                </value>
                <value>
                    <fullName>Sweep to Repo</fullName>
                </value>
                <value>
                    <fullName>Sweep to Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval/Loan committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Charged off</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__State__c</fullName>
        <description>State for mailing address.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StatementFrequency__c</fullName>
        <label>Statement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Charge-off</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Paid out</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TargetLimit__c</fullName>
        <description>The limit on items or value that the service will process.</description>
        <label>Target Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Nonqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TermDepositMaturityDate__c</fullName>
        <description>The date a fixed term deposit matures.</description>
        <label>Term Deposit Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TotalCreditLimit__c</fullName>
        <label>Total Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHoldAmountAsOfDate__c</fullName>
        <description>The date the total hold amount is relevant.</description>
        <label>Total Hold Amount As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHoldAmount__c</fullName>
        <description>The total hold amount on the financial account.</description>
        <label>Total Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family home</fullName>
                </value>
                <value>
                    <fullName>Town home</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Account_Stage__c</fullName>
        <label>Financial Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation Gathering</fullName>
                </value>
                <value>
                    <fullName>Waiting for Client Signatures</fullName>
                </value>
                <value>
                    <fullName>Operations Review</fullName>
                </value>
                <value>
                    <fullName>Rejected - Operations</fullName>
                </value>
                <value>
                    <fullName>Compliance Review</fullName>
                </value>
                <value>
                    <fullName>Rejection - Compliance</fullName>
                </value>
                <value>
                    <fullName>Opened &amp; Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Name_Number__c</fullName>
        <formula>Name + &apos; (&apos; +  FinServ__FinancialAccountNumber__c +&apos;)&apos;</formula>
        <label>Financial Name Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <description>Funding Amount</description>
        <label>Funding Amount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Method__c</fullName>
        <description>Funding Method</description>
        <label>Funding Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Vlocity purposes only.</description>
        <inlineHelpText>For Vlocity purposes only.</inlineHelpText>
        <label>Include in List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastDisclosureDate__c</fullName>
        <label>Last Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastStatementDate__c</fullName>
        <label>Last Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_O_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a Power of Attorney on this IRA?</description>
        <inlineHelpText>Is there a Power of Attorney on this IRA? Checked if yes.</inlineHelpText>
        <label>P.O.A. Designated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Product Type</description>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product</description>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <description>Routing Number</description>
        <label>Routing Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceStatusMeasure__c</fullName>
        <description>Analytics field to show status of Service ( Active or Inactive)</description>
        <label>ServiceStatusMeasure</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Status__c</columns>
        <columns>FinServ__FinancialAccountNumber__c</columns>
        <columns>FinServ__Balance__c</columns>
        <columns>FinServ__InsuredAmount__c</columns>
        <columns>FinServ__OpenDate__c</columns>
        <columns>External_ID__c</columns>
        <columns>FinServ__RecordTypeName__c</columns>
        <columns>FinServ__PrimaryOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>FINS_CRE_Loan</fullName>
        <active>true</active>
        <label>CRE Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Collection_Services</fullName>
        <active>true</active>
        <label>Collection Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Commercial_Loan</fullName>
        <active>true</active>
        <description>For nCino loan process</description>
        <label>Commercial Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Debit_Card</fullName>
        <active>true</active>
        <label>Debit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Equipment_Finance</fullName>
        <active>true</active>
        <label>Equipment Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Fraud_Prevention_Services</fullName>
        <active>true</active>
        <label>Fraud Prevention Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Line_of_Credit</fullName>
        <active>true</active>
        <label>Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Payment_Services</fullName>
        <active>true</active>
        <label>Payment Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Reconciliation_Services</fullName>
        <active>true</active>
        <label>Reconciliation Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Sweep_Services</fullName>
        <active>true</active>
        <label>Sweep Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Term_Loan</fullName>
        <active>true</active>
        <label>Term Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Treasury_Services</fullName>
        <active>true</active>
        <label>Treasury Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__AutoLoan</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of a motor vehicle.</description>
        <label>Auto Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__BankingAccount</fullName>
        <active>true</active>
        <description>Bank accounts such as savings, checking, and credit</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CheckingAccount</fullName>
        <active>true</active>
        <description>Represents a deposit account for withdrawals and deposits</description>
        <label>Checking Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CreditCard</fullName>
        <active>true</active>
        <description>Represents a type of payment card issued with a line of credit</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <description>General financial accounts</description>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__HELOC</fullName>
        <active>true</active>
        <description>Represents a line of credit secured by equity in real property.</description>
        <label>HELOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InsurancePolicy</fullName>
        <active>true</active>
        <description>Insurance policies</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InvestmentAccount</fullName>
        <active>true</active>
        <description>Investment accounts such as brokerage accounts</description>
        <label>Investment Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__LoanAccount</fullName>
        <active>true</active>
        <description>Represents a type of account for financing a purchase.</description>
        <label>Loan Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Mortgage</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of real property.</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__SavingsAccount</fullName>
        <active>true</active>
        <description>Represents an interest-bearing deposit account</description>
        <label>Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__TreasuryService</fullName>
        <active>true</active>
        <description>Accounts that provide transaction or investment services for chief financial officers or treasurers.</description>
        <label>Treasury Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__ManagedAndHeldAwayCannotBeBothSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(FinServ__Managed__c, FinServ__HeldAway__c)</errorConditionFormula>
        <errorMessage>Select either Managed or Held Away for this Financial Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NoJointOwnerForIndividualAccounts</fullName>
        <active>true</active>
        <description>Error message when a joint owner is entered for an individually owned account.</description>
        <errorConditionFormula>AND(ISPICKVAL(FinServ__Ownership__c , &quot;Individual&quot;), NOT(ISBLANK(FinServ__JointOwner__c)))</errorConditionFormula>
        <errorMessage>Individually owned accounts can&apos;t have a joint owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__PrimaryAndJointOwnerCannotBeSame</fullName>
        <active>false</active>
        <description>Check to see if Primary Owner and the Joint Owner are the same person</description>
        <errorConditionFormula>FinServ__PrimaryOwner__c = FinServ__JointOwner__c</errorConditionFormula>
        <errorMessage>The primary and joint owner must be different.</errorMessage>
    </validationRules>
</CustomObject>